Update and rename config_sample.env to config.env

--- a/config.env
+++ b/config.env
@@ -1,11 +1,8 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
-
 # REQUIRED CONFIG
-OWNER_ID = ""
-TELEGRAM_API = ""
-TELEGRAM_HASH = ""
-BOT_TOKEN = ""
+OWNER_ID = "1633416742"
+TELEGRAM_API = "18991521"
+TELEGRAM_HASH = "0c1086e0013e5f6633ad3b4bae13238b"
+BOT_TOKEN = "5991721762:AAGXPwPyDYH9t1mH8EEsYtnLHBQ3Tqs3vpc"
 
 # Update
 UPSTREAM_REPO = "https://github.com/Dawn-India/Z-Mirror"
@@ -28,7 +25,7 @@ INCOMPLETE_TASK_NOTIFIER = "True"
 YT_DLP_OPTIONS = ""
 
 # GDrirve Tools
-GDRIVE_ID = ""
+GDRIVE_ID = "19WiLOId4thjknsE4k0JcciQmBfCzmwyl"
 IS_TEAM_DRIVE = "False"
 USE_SERVICE_ACCOUNTS = "False"
 STOP_DUPLICATE = "True"
